--- a/FP/index.html
+++ b/FP/index.html
@@ -27,7 +27,7 @@
       <div class="mb-3">
         <label for="Data2" class="form-label">Data 2</label>
         <input type="Data2" class="form-control" id="Data2" />
-        <div id="emailHelp" class="form-text">Masukan data 2 yang anda punya</div>
+        <div id="emailHelp" class="form-text">Masukan dataa 2 yang anda punya</div>
       </div>
       <!-- Akhir Data 2 -->
 
