--- a/FP/index.html
+++ b/FP/index.html
@@ -11,44 +11,49 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>FP SPK</h1>
+    <div class="ms-1">
+      <h1>FP SPK</h1>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <form>
-      <!-- Mulai Data 1 -->
-      <div class="mb-3">
-        <label for="Data1" class="form-label">Data 1</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
-        <div id="emailHelp" class="form-text">Masukan data 1 yang anda punya</div>
-      </div>
-      <!-- Akhir Data 1 -->
+      <div class="div row-cols-3">
+        <!-- Mulai Data 1 -->
+        <div class="mb-3 ms-1">
+          <label for="Data1" class="form-label">Data 1</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+          <div id="emailHelp" class="form-text">Masukan data 1 yang anda punya</div>
+        </div>
+        <!-- Akhir Data 1 -->
 
-      <!-- Mulai data 2 -->
-      <div class="mb-3">
-        <label for="Data2" class="form-label">Data 2</label>
-        <input type="Data2" class="form-control" id="Data2" />
-        <div id="emailHelp" class="form-text">Masukan dataa 2 yang anda punya</div>
-      </div>
-      <!-- Akhir Data 2 -->
+        <!-- Mulai data 2 -->
+        <div class="mb-3 ms-1">
+          <label for="Data2" class="form-label">Data 2</label>
+          <input type="Data2" class="form-control" id="Data2" />
+          <div id="emailHelp" class="form-text">Masukan dataa 2 yang anda punya</div>
+        </div>
+        <!-- Akhir Data 2 -->
 
-      <!-- Mulai Data 3 -->
-      <div class="mb-3">
-        <label for="Data2" class="form-label">Data 3</label>
-        <input type="Data3" class="form-control" id="Data3" />
-        <div id="emailHelp" class="form-text">Masukan data 3 yang anda punya</div>
-      </div>
-      <!-- Akhir Data 3 -->
+        <!-- Mulai Data 3 -->
+        <div class="mb-3 ms-1">
+          <label for="Data2" class="form-label">Data 3</label>
+          <input type="Data3" class="form-control" id="Data3" />
+          <div id="emailHelp" class="form-text">Masukan data 3 yang anda punya</div>
+        </div>
+        <!-- Akhir Data 3 -->
 
-      <!-- Mulai Data 4 -->
-      <div class="mb-3">
-        <label for="Data4" class="form-label">Data 4</label>
-        <input type="Data4" class="form-control" id="Data4" />
-        <div id="emailHelp" class="form-text">Masukan data 4 yang anda punya</div>
+        <!-- Mulai Data 4 -->
+        <div class="mb-3 ms-1">
+          <label for="Data4" class="form-label">Data 4</label>
+          <input type="Data4" class="form-control" id="Data4" />
+          <div id="emailHelp" class="form-text">Masukan data 4 yang anda punya</div>
+        </div>
+        <!-- Akhir Data 4 -->
       </div>
-      <!-- Akhir Data 4 -->
-
       <!-- Awal Mulai -->
-      <button type="submit" class="btn btn-primary mt-3" id="Mulai">Mulai</button>
+      <div class="row-cols-6 ms-1">
+        <button type="submit" class="btn btn-primary mt-3" id="Mulai">Mulai</button>
+      </div>
       <!-- Akhir Mulai -->
     </form>
   </body>
