--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <title>Hello, world!</title>
+    <title>SPK Untuk Menentukan Kandidat Calon Karyawan di PT.XYZ</title>
   </head>
   <body>
     <h1 class="h1 text-center mb-4 mt-4">Final Project SPK</h1>
@@ -16,7 +16,7 @@
       <form action="#" class="form col-4">
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <h2>Aspek Kedisiplinan</h2>
+            <h2 class="h2 text-center">Aspek Kedisiplinan</h2>
             <!-- Mulai Data 1 -->
             <label>Input Nilai Ketepatan Waktu</label>
             <br />
@@ -66,9 +66,9 @@
       <form action="#" class="form col-4 mb-2">
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <h2>Aspek Kinerja</h2>
+            <h2 class="h2 text-center">Aspek Kinerja</h2>
             <!-- Mulai Data 1 -->
-            <label>Input Data1 </label>
+            <label>Input Nilai Tanggung Jawab</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata1" id="data1" />
             <br />
@@ -79,7 +79,7 @@
         <!-- Mulai Data 2 -->
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <label>Masukkan data 2: </label>
+            <label>Input Nilai Ketelitian</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata2" id="data2" />
             <br />
@@ -90,7 +90,7 @@
         <!-- Mulai Data 3 -->
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <label>Masukkan data 3: </label>
+            <label>Input Nilai Pencapaian Target</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata3" id="data3" />
             <br />
@@ -101,7 +101,7 @@
         <!-- Mulai Data 4 -->
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <label>Masukkan data 4: </label>
+            <label>Input Nilai Semangat Kerja</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata3" id="data4" />
             <br />
@@ -113,12 +113,12 @@
         </div>
         <!-- Akhir Data 4 -->
       </form>
-      <form action="#" class="form col-4">
+      <form action="#" class="form col-4 mb-3">
         <div class="row justify-content-center">
-          <div class="col-4">
-            <h2>Aspek Periode Kerja</h2>
+          <div class="col-4 mb-3">
+            <h2 class="h2 text-center">Aspek Periode Kerja</h2>
             <!-- Mulai Data 1 -->
-            <label>Input Data1 </label>
+            <label>Input Nilai Lama Bekerja</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata1" id="data1" />
             <br />
@@ -128,8 +128,8 @@
 
         <!-- Mulai Data 2 -->
         <div class="row justify-content-center">
-          <div class="col-4">
-            <label>Masukkan data 2: </label>
+          <div class="col-4 mb-3">
+            <label>Input Nilai Komitmen</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata2" id="data2" />
             <br />
@@ -139,8 +139,8 @@
 
         <!-- Mulai Data 3 -->
         <div class="row justify-content-center">
-          <div class="col-4">
-            <label>Masukkan data 3: </label>
+          <div class="col-4 mb-3">
+            <label>Input Nilai Pengaruh</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata3" id="data3" />
             <br />
@@ -151,7 +151,7 @@
         <!-- Mulai Data 4 -->
         <div class="row justify-content-center">
           <div class="col-4">
-            <label>Masukkan data 4: </label>
+            <label>Input Nilai Dominasi/Kekuasaan</label>
             <br />
             <input type="number" min="1" max="5" name="inputdata3" id="data4" />
             <br />
