--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form action="#" class="form col-4">
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <h2 class="h2 text-center">Aspek Kedisiplinan</h2>
+            <h2 class="h2">Aspek Kedisiplinan</h2>
             <!-- Mulai Data 1 -->
             <label>Input Nilai Ketepatan Waktu</label>
             <br />
@@ -66,7 +66,7 @@
       <form action="#" class="form col-4 mb-2">
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <h2 class="h2 text-center">Aspek Kinerja</h2>
+            <h2 class="h2">Aspek Kinerja</h2>
             <!-- Mulai Data 1 -->
             <label>Input Nilai Tanggung Jawab</label>
             <br />
@@ -116,7 +116,7 @@
       <form action="#" class="form col-4 mb-3">
         <div class="row justify-content-center">
           <div class="col-4 mb-3">
-            <h2 class="h2 text-center">Aspek Periode Kerja</h2>
+            <h2 class="h2">Aspek Periode Kerja</h2>
             <!-- Mulai Data 1 -->
             <label>Input Nilai Lama Bekerja</label>
             <br />
@@ -164,6 +164,31 @@
         <!-- Akhir Data 4 -->
       </form>
     </div>
+    <!-- Awal footer -->
+    <footer class="footer mt-5 pt-5">
+      <div class="row fw-bold justify-content-center">
+        <div class="col-2">
+          <p class="text-start fw-bold text-danger">NOTE:</p>
+        </div>
+        <div class="col-3">
+          <p class="text-start">
+            Nilai 1 = Sangat Tidak Baik <br />
+            Nilai 2 = Kurang
+          </p>
+        </div>
+        <div class="col-3">
+          <p class="text-start">
+            Nilai 3 = Cukup<br />
+            Nilai 4 = Baik
+          </p>
+        </div>
+        <div class="col-3">
+          <p class="text-start">Nilai 5 = Sangat Baik</p>
+        </div>
+      </div>
+    </footer>
+    <!-- Akhir footer -->
+
     <script type="text/javascript" src="Perhitungan.js"></script>
   </body>
   <style>
@@ -172,6 +197,11 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
+    }
+    .footer {
+      background-color: #f8f8f8;
+      padding: 50px;
+      text-align: center;
     }
   </style>
 </html>
